// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`banner/BannerAnimator/BannerAnimator snapshot tests renders hidden 1`] = `
<div
  aria-busy={false}
  aria-expanded={false}
  onTransitionEnd={[Function]}
  style={
    Object {
      "height": "0",
      "overflow": "hidden",
      "transition": "",
    }
  }
>
  <div
    style={
      Object {
        "transform": "translateY(-50px)",
        "transition": "",
      }
    }
  />
</div>
`;

exports[`banner/BannerAnimator/BannerAnimator snapshot tests renders in the bottom position 1`] = `
<div
  aria-busy={false}
  aria-expanded={false}
  onTransitionEnd={[Function]}
  style={null}
>
  <div
    style={null}
  >
    <div />
  </div>
</div>
`;

exports[`banner/BannerAnimator/BannerAnimator snapshot tests renders with only children 1`] = `
<div
  aria-busy={false}
  aria-expanded={false}
  onTransitionEnd={[Function]}
  style={null}
>
  <div
    style={null}
  >
    <div />
  </div>
</div>
`;
